fix dialog overflow

--- a/packages/styles/src/base.scss
+++ b/packages/styles/src/base.scss
@@ -4,5 +4,5 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: inherit;
-	transition-duration: var(--vuuui-transition-duration);
+	transition-duration: var(--vuuui-transition-duration--short);
 }
