--- a/packages/styles/src/components/overlay/dialog.scss
+++ b/packages/styles/src/components/overlay/dialog.scss
@@ -41,13 +41,18 @@
 		translate: 0 -50%;
 		width: 700px;
 		max-width: 100%;
+		max-height: 100%;
 		padding: 0;
-		overflow: hidden;
+		overscroll-behavior: none;
+		overflow-y: scroll;
 
 		& > .vuuui-title {
+			position: sticky;
+			top: 0;
 			display: flex;
 			justify-content: space-between;
 			border-bottom: 1px solid var(--vuuui-color-border);
+			background-color: var(--vuuui-color-bg);
 
 			& > .vuuui-left {
 				display: flex;
@@ -76,8 +81,6 @@
 		}
 
 		& > .vuuui-content {
-			overflow-y: scroll;
-			overscroll-behavior: none;
 			padding: var(--vuuui-padding);
 		}
 	}
